[package]
name = "valine_bot"
version = "2.3.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
bpaf = { version = "0.9", features = [ "derive" ] }
chrono = "0.4"
dashmap = "6.1"
duration-str = "0.13.0"
futures = "0.3"
itertools = "0.14"
sysinfo = "0.33"
# Git 上では修正されているが、crates.io にはまだ反映されていないため、git で指定
poise = { git = "https://github.com/serenity-rs/poise", rev = "db10b126c8b07f7e1924cba1672f04ff24ed4ec7" }
rand = "0.9"
regex = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_with = "3"
serenity = "0.12.4"
similar = "2.7"
thiserror = "2"
tokio = { version = "1.0", features = [ "rt-multi-thread", "macros", "signal" ] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
