[package]
name = "valine_bot"
version = "2.4.1"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
async-stream = "0.3"
bpaf = { version = "0.9", features = [ "derive" ] }
chrono = "0.4"
dashmap = "6.1"
duration-str = "0.21"
futures = "0.3"
itertools = "0.14"
poise = "0.6.2"
rand = "0.10"
regex = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_with = "3"
serenity = "0.12.5"
similar = "3.1"
sysinfo = "0.38"
thiserror = "2"
tokio = { version = "1.0", features = [ "rt-multi-thread", "macros", "signal" ] }
toml = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
