[package]
name = "valine_bot"
version = "3.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
async-stream = "0.3"
bpaf = { version = "0.9", features = [ "derive" ] }
chrono = "0.4"
dashmap = "6.1"
duration-str = "0.21"
futures = "0.3"
itertools = "0.14"
rand = "0.10"
regex = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_with = "3"
similar = "3.1"
sysinfo = "0.39"
thiserror = "2"
tokio = { version = "1.0", features = [ "rt-multi-thread", "macros", "signal" ] }
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
valine_bot_macros = { path = "macros" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
rev = "30a293f0a02c63908b68a9f4fa687e964b7ff5c8"

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
rev = "de8bd6fdd54de8ee5daf0242ffb6dc6eba58df69"

# Poise が next ブランチを参照しているので、直接の依存関係に合わせる
[replace."https://github.com/serenity-rs/serenity#serenity:0.12.5"]
git = "https://github.com/serenity-rs/serenity"
rev = "30a293f0a02c63908b68a9f4fa687e964b7ff5c8"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
